eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Branch__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Limit__c</fullName>
        <label>Branch Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Location__c</fullName>
        <label>Branch Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Mnemonic__c</fullName>
        <label>Branch Mnemonic</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Number__c</fullName>
        <label>Branch Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Open_Days__c</fullName>
        <label>Branch Open Days</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cash_Order_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Order Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <inlineHelpText>Used for Loomis Cash Order Deliveries</inlineHelpText>
        <label>Ref Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <label>Default Currency</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QAR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deputy_Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deputy Branch Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Branches1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch_Limit__c</columns>
        <columns>Cash_Order_Approver__c</columns>
        <columns>D_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Branch_Open_Days__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Deputy_Branch_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>